2008-07-30  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-model.c (clutter_model_set_sorting_column): This
	function is supposed to accept -1 to disable sorting. However it
	checks for whether the column is >= the number of columns, but
	clutter_model_get_n_columns() returns an unsigned int so the
	column number also gets promoted to unsigned for the
	comparison. Therefore -1 is always greater than the number of
	columns so it wouldn't let you set it.

2008-07-26  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-timeline.c (clutter_timeline_list_markers): When
	requesting the list of markers it was returning the marker data as
	a string instead of the name so it was copying garbage.

2008-07-25  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-actor.c (clutter_actor_remove_clip)
	(clutter_actor_set_clipu): Queue a redraw when the clip is
	changed.

2008-07-24  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-script.c: The example in the documentation
	showed a color being specified as '0xff0000ff' but it should be
	'#ff0000ff'

2008-07-23  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug 1062 - clutter_actor_query_coords() replacement in 0.8

	* clutter/clutter-deprecated.h: Fix the deprecation warning
	for clutter_actor_query_coords(). (Gwenole Beauchesne)

2008-07-17  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug 1047 -  API documentation from release tarball is not
	            installed by "make install"

	* configure.ac:
	* Makefile.am: Make the recursion into the documentation
	directory depend on on whether we explicitly enable it or
	if we are not inside an SVN checkout.

2008-07-17  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-texture.c: 
	* clutter/clutter-rectangle.c: 
	* clutter/clutter-group.c: 
	* clutter/clutter-entry.c: 
	* clutter/clutter-clone-texture.c: Remove unnecessary calls to
	cogl_{push,pop}_matrix. The matrix is preserved in
	clutter_actor_paint whenever the actor's transformation is applied